# ardrone_autonomy

./: CMakeLists.txt  ardrone_lib.patch  package.xml
ARDroneSDK/: ardrone_lib.patch  debug-symbols.old.patch  debug-symbols.patch  gps-waypoint.patch
include/ardrone_autonomy/: NavdataMessageDefinitions.h  ardrone_driver.h  ardrone_sdk.h  opengl_stage.h  video.h
src/: NavdataMessageDefinitions.h  ardrone_driver.cpp  ardrone_driver.h  ardrone_driver_node.cpp  ardrone_sdk.cpp  opengl_shader.c  opengl_stage.c  teleop_twist.cpp
